crates/math-core/tests/snapshots/error_test__mathbin_mutli_arg.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x \\mathbin{++} y"
---
Error: Support for this argument isn't implemented yet for class-changing commands.
   ╭─[ <input>:1:11 ]
   │
 1 │ x \mathbin{++} y
   │           ┬  
   │           ╰── unsupported argument
───╯
